<resources>
    <string name="app_name">Мои финансы</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Кирилл Метелёв</string>
    <string name="nav_header_subtitle">metelevkirill4@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="button_main">Главная</string>
    <string name="button_add">Добавить доход</string>
    <string name="button_sub">Добавить расход</string>
    <string name="button_cat">Категории</string>
    <string name="button_acc">Счета</string>
    <string name="button_reg">Регулярные платежи</string>
    <string name="button_grap">Графики</string>
    <string name="menu_home">Мои финансы</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="add_name">Добавление дохода</string>
    <string name="sub_name">Добавление расхода</string>
    <string name="hint_add">Введите сумму</string>
    <string name="Account">Счет</string>
    <string name="Account_with">Счет:</string>
    <string name="Accounts">Счета</string>
    <string name="Sum_with">Сумма:</string>
    <string name="Type_with">Тип:</string>
    <string name="Date_with">Дата:</string>
    <string name="Comment_with">Заметка:</string>
    <string name="Categories">Категории</string>
    <string name="Category">Категория:</string>
    <string name="Button_add">Добавить</string>
    <string name="Summary">Текущий баланс</string>
    <string name="Comments">Заметка</string>
    <string name="hint_comment">Введите заметку</string>
    <string name="cat_name">Категории</string>
    <string name="Button_add_cat">Добавить категорию</string>
    <string name="Button_add_acc">Добавить счет</string>
    <string name="cat_hint">Введите название категории</string>
    <string name="acc_hint">Введите название счета</string>
    <string name="add_cat_alert">Добавление категории</string>
    <string name="add_acc_alert">Добавление счета</string>
    <string name="save">Сохранить</string>
    <string name="cancel">Отмена</string>
    <string name="hint_add_input">Введите счет</string>
    <string name="date_input">Введите дату</string>
    <string name="date">Дата</string>
    <string name="required">Необходимо заполнить!</string>
    <string name="update_transaction">Редактирование транзакции</string>
    <string name="sum">Сумма</string>
    <string name="Button_update">Изменить</string>
    <string name="Button_delete">Удалить</string>
    <string name="sure">Вы уверены?</string>
    <string name="ok">Да</string>
    <string name="no">Нет</string>
    <string name="regular_activity">Регулярные платежи</string>
    <string name="regular_add">Добавить регулярный платеж</string>
</resources>