<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:backgroundTint="@color/app_background">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/app_background">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:backgroundTint="@color/app_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView21"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:text="@string/Account_with"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView23"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:gravity="left"
                    android:text="@string/Category"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewCategories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Sum_with"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewSum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView22"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Type_with"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView24"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:text="@string/Date_with"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView25"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_weight="0.5"
                    android:gravity="center_vertical"
                    android:text="@string/Comment_with"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textViewComment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="TextView"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>